# cohere-compass-sdk

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  cohere-compass-sdk.code-workspace  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml  improvement.yml
.github/workflows/: autogenerate-release.yml  check-version-bump.yml  formatting.yml  pre-commit-checks.yml  publish.yaml  test.yml  test_publish.yml  typecheck.yml
cohere/compass/: __init__.py  constants.py  exceptions.py  utils.py
cohere/compass/clients/: __init__.py  access_control.py  async_compass.py  base.py  compass.py  parser.py  rbac.py
cohere/compass/models/: __init__.py  access_control.py  config.py  datasources.py  documents.py  rbac.py  search.py
cohere_compass/: __init__.py  constants.py  exceptions.py  utils.py
cohere_compass/clients/: __init__.py  access_control.py  compass.py  compass_async.py  parser.py  parser_async.py  rbac.py
cohere_compass/models/: __init__.py  access_control.py  config.py  core.py  datasources.py  documents.py  enrichments.py  indexes.py  search.py  synchronizers.py
cohere_compass/utils/: __init__.py  asyn.py  documents.py  fs.py  iter.py  retry.py
compass_sdk/: __init__.py  compass.py  constants.py  exceptions.py  parser.py  rbac.py  types.py  utils.py
compass_sdk/clients/: __init__.py  compass.py  parser.py  rbac.py
compass_sdk/models/: __init__.py  config.py  datasources.py  documents.py  rbac.py  search.py
examples/: README.md  generate_vscode_launch.py  pyproject.toml
examples/compass_sdk_examples/: add_attributes.py  async_direct_search.py  async_get_index_details.py  batch_get_documents.py  create_index.py  delete_document.py  delete_index.py  direct_search.py  get_document.py  get_document_asset.py  get_index_details.py  get_models.py  list_indexes.py  parse_document.py  retention_policy.py  scroll_all_chunks.py  search_chunks.py  search_documents.py  synchronizer.py  utils.py
examples/compass_sdk_examples/async/: add_attributes.py  batch_get_documents.py  create_index.py  delete_document.py  delete_index.py  direct_search.py  get_document.py  list_indexes.py  retention_policy.py  search_chunks.py
examples/fern_documentation/docs/: Warehouse and Retail Sales.csv
examples/fern_documentation/python/core/: add_metadata.py  create_index.py  delete_doc.py  delete_index.py  direct_search_index.py  get_doc_asset.py  get_document.py  get_index_details.py  get_models.py  list_index.py  put_doc_into_index.py  refresh_index.py  search_chunks.py  search_docs.py  update_group_auth.py  upload_files.py
examples/fern_documentation/python/datasources/: create_datasource.py  delete_datasource.py  document_status.py  get_datasource.py  list_all_datasources.py  sync_datasource.py
examples/fern_documentation/python/rbac/group/: add_member.py  add_roles.py  create.py  delete.py  get_details.py  get_member_page.py  get_page.py  get_roles_page.py  remove_members.py  remove_role.py
examples/fern_documentation/python/rbac/role/: create.py  delete.py  get_details.py  get_groups_page.py  get_pages.py  update.py
examples/fern_documentation/python/rbac/user/: create.py  delete.py  get_details.py  get_group_page.py  get_page.py
openapi/: compass_api.json  generate.sh
openapi/python_client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
openapi/python_client/.github/workflows/: python.yml
openapi/python_client/.openapi-generator/: FILES
openapi/python_client/cohere/compass/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi/python_client/cohere/compass/api/: __init__.py  default_api.py
openapi/python_client/cohere/compass/models/: __init__.py  azure_blob_storage_config.py  create_data_source.py  data_source.py  datasource_config.py  get_config_response.py  one_drive_config.py  paginated_list_data_source.py
openapi/python_client/docs/: AzureBlobStorageConfig.md  CreateDataSource.md  DataSource.md  DatasourceConfig.md  DefaultApi.md  GetConfigResponse.md  OneDriveConfig.md  PaginatedListDataSource.md
openapi/python_client/test/: test_azure_blob_storage_config.py  test_create_data_source.py  test_data_source.py  test_datasource_config.py  test_default_api.py  test_get_config_response.py  test_one_drive_config.py  test_paginated_list_data_source.py
tests/: conftest.py  test_access_control.py  test_compass_async_client.py  test_compass_client.py  test_context_management.py  test_documents_models.py  test_large_files.py  test_parser_async_client.py  test_parser_client.py  test_utils.py  utils.py
tests/docs/: json_example.json  sample.pptx  tmdb_tiny.csv  tmdb_tiny.json  tmdb_tiny.parquet
