[tool.poetry]
name = "cohere-compass-sdk"
version = "1.4.1"
authors = []
description = "Cohere Compass SDK"
readme = "README.md"
packages = [{ include = "cohere_compass" }]

[tool.poetry.dependencies]
fsspec = ">=2024.6.1"
joblib = "1.4.2"
pydantic = ">=2.6.3"
python = ">=3.9,<4.0"
requests = ">=2.25.0,<3.0.0"
tenacity = "^8.2.3"
Deprecated = "^1.2.18"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.390"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
ruff = "^0.8.1"

[tool.pyright]
reportMissingImports = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "C90", # mccabe (for code complexity)
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "Q",   # flakes8-quotes
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
ignore = [
    "D100", # ignore missing docstring in module
    "D104", # ignore missing docstring in public package
    "D212", # ignore multi-line docstring summary should start at the first line	
]
isort = { known-first-party = ["cohere_compass"] }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
