[project]
name = "compass-sdk-examples"
version = "0.1.0"
description = "Various examples of how to use the Compass SDK"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = ["compass-sdk @ ../", "pytest-dotenv (>=0.5.2,<0.6.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
compass-sdk = { path = "../", develop = true }

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.396"
ruff = "^0.9.9"

[project.scripts]
create_index = 'compass_sdk_examples.create_index:main'
list_indexes = 'compass_sdk_examples.list_indexes:main'
search_documents = 'compass_sdk_examples.search_documents:main'


[tool.pyright]
reportMissingImports = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "C90", # mccabe (for code complexity)
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "Q",   # flakes8-quotes
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
ignore = [
    "D100", # ignore missing docstring in module
    "D103", # ignore missing docstring in public function
    "D104", # ignore missing docstring in public package
    "D200", # ignore one-line docstring should not be in multi-line format
    "D212", # ignore multi-line docstring summary should start at the first line	
]
isort = { known-first-party = ["compass_sdk_examples"] }
mccabe = { max-complexity = 15 }
